BusOne/src/objects/Analytics_Product_Group_vod__c.object
<CustomObject>
    <description>The Anaytics Product Group object provides a location to load the Product Groupings utilized in the Analytics Files that have been loaded.  The Product Groupings can be aggregated for display purposes utilizing the self-referencing Lookup.</description>
    <fields>
        <fullName>Company_Product_Group_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checkbox to define if the Product Group is a Company product.</description>
        <label>Company Product Group</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Country_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Country is used for data loading</description>
        <label>Country</label>
        <referenceTo>Country_vod__c</referenceTo>
        <relationshipLabel>Analytics Product Groups</relationshipLabel>
        <relationshipName>Analytics_Product_Groups</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Display_In_Reports_vod__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Field to determine if the Analytics Product Group should be displayed in the Analytics Reports.   If checked, the group will be displayed on Reports.</description>
        <label>Display In Reports?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Display_Name_vod__c</fullName>
        <description>The Display Name is used to represent the Product Group within the Analytics Reports.</description>
        <label>Display Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Display_Order_vod__c</fullName>
        <description>Display Order is used to control the order in which the Product Group is displayed in the reports.</description>
        <label>Display Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Do_Not_Display_in_Formulary_for_Rep_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked this Analytics Product Group record in the Formulary for the Rep will not be displayed.</description>
        <label>Do Not Display in Formulary for Rep</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>External_ID_vod__c</fullName>
        <description>External Id is used for data loading only</description>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>25</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Market_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Market associated to the Analytics Product Group.</description>
        <label>Market</label>
        <referenceTo>Analytics_Markets_vod__c</referenceTo>
        <relationshipLabel>Analytics Product Groups</relationshipLabel>
        <relationshipName>R00NT0000000lduqMAA</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Parent_Product_Group_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Parent Product Group provides for aggregation of data within the Sales Reports.  A Product Group record that has multiple Product Group children records will be displayed in the reports with the aggregated sales data from the child product groups.</description>
        <label>Parent Product Group</label>
        <referenceTo>Analytics_Product_Group_vod__c</referenceTo>
        <relationshipLabel>Analytics Product Groups</relationshipLabel>
        <relationshipName>Analytics_Product_Group_vod</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Analytics Product Group</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Display_Name_vod__c</columns>
        <columns>Display_Order_vod__c</columns>
        <columns>Company_Product_Group_vod__c</columns>
        <columns>Display_In_Reports_vod__c</columns>
        <columns>Parent_Product_Group_vod__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Product Group</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Analytics Product Groups</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>